--- a/final_script.ipynb
+++ b/final_script.ipynb
@@ -2,21 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ValueError",
-     "evalue": "sleep length must be non-negative",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-6-16d3834808db>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m    135\u001b[0m     \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'updated requests_left is '\u001b[0m \u001b[1;33m+\u001b[0m \u001b[0mstr\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mrequests_left\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m+\u001b[0m\u001b[1;34m'\\n'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    136\u001b[0m     \u001b[0mtime_left_script\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mtime_left_script\u001b[0m\u001b[1;33m-\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mend_time_iteration\u001b[0m\u001b[1;33m-\u001b[0m\u001b[0mstart_time_iteration\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m-\u001b[0m\u001b[0msleep_time\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 137\u001b[1;33m     \u001b[0mtime\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msleep\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0msleep_time\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    138\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    139\u001b[0m     \u001b[1;32mif\u001b[0m \u001b[0msleep_time\u001b[0m\u001b[1;33m>\u001b[0m\u001b[0msecs_until_newwin\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mValueError\u001b[0m: sleep length must be non-negative"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#! python3\n",
     "#importing modules\n",
@@ -129,8 +117,9 @@
     "            if fee_filter is not None:\n",
     "                df_fin = df_fin[df_fin['fee_type']==fee_filter]\n",
     "            \n",
-    "            df_fin.reset_index(inplace = True)\n",
-    "            df_fin.drop(columns={'index'},inplace = True)\n",
+    "            df_fin = df_fin.reset_index(inplace = True)\n",
+    "            df_fin = df_fin.drop(columns={'index'},inplace = True)\n",
+    "            df_fin.to_csv(r'final_slots.csv', index = False)\n",
     "            \n",
     "            #opens alarm, prints df_fin and launches webpage\n",
     "            if len(df_fin)>0:\n",
@@ -138,6 +127,7 @@
     "                print(df_fin)\n",
     "                if open_browser is not None:\n",
     "                    subprocess.Popen([open_browser, r\"https://selfregistration.cowin.gov.in/\"])\n",
+    "                break\n",
     "            \n",
     "             \n",
     "        \n",
@@ -159,6 +149,15 @@
     "    if sleep_time>secs_until_newwin:\n",
     "        secs_until_newwin = (5*60)\n",
     "        requests_left = 100"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_fin"
    ]
   },
   {
